Bug 407894 - Scrolling to the right fails to redraw documents
Summary: Scrolling to the right fails to redraw documents
Status: RESOLVED FIXED
Alias: None
Product: kdiff3
Classification: Applications
Component: application (other bugs)
Version First Reported In: 1.8.x
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: michael
URL:
Keywords:
: 409482 417194 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-05-24 07:57 UTC by nyanpasu64
Modified: 2020-02-20 04:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nyanpasu64 2019-05-24 07:57:08 UTC
SUMMARY
When I open files in kdiff3 and drag the bottom scrollbar to the right, documents scroll into white space, rather than showing text.

STEPS TO REPRODUCE
1. kdiff3 /etc/fstab /etc/fstab (or another file)
2. Ensure menu Diffview/Word Wrap Diff Windows is unchecked.
3. Resize the window width to be small.
4. Drag the bottom scrollbar to the right.

OBSERVED RESULT
When scrolling to reveal off-screen text, it's missing and replaced with the background color (white or another color).

EXPECTED RESULT
When scrolling to reveal off-screen text, it's present.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro
(available in About System)
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.57.0
Qt Version: 5.12.3

ADDITIONAL INFORMATION
Comment 1 michael 2019-07-05 16:15:27 UTC
*** Bug 409482 has been marked as a duplicate of this bug. ***
Comment 2 Martin Koller 2019-10-25 11:09:12 UTC
changing priority since this bug essentialy renders kdiff3 useless
Comment 3 michael 2019-11-01 23:33:37 UTC
Demoting this issue as simplely dragging the windows off screen and back on will trigger a redraw. Also this issue seems only to happen when dragging the scrollbar to the right.
Comment 4 michael 2020-01-16 02:54:51 UTC
I don't know why but this seems not to reproduce in master. On the latest 1.8 this still occurs however kdiff3 sometimes seems to update the window automatically after being left alone for few seconds.
Comment 5 michael 2020-02-08 02:43:57 UTC
Git commit 57365911d3aeb9342445773bf58d58a818990fa3 by Michael Reeves.
Committed on 08/02/2020 at 02:40.
Pushed by mreeves into branch '1.8'.

Redraw while scrolling in DiffTextWindow
FIXED-IN:1.8.2

M  +1    -0    src/difftextwindow.cpp

https://invent.kde.org/kde/kdiff3/commit/57365911d3aeb9342445773bf58d58a818990fa3
Comment 6 michael 2020-02-08 02:43:57 UTC
Git commit 578d3901f6db1fe9edb3641843ff7276fa1ee2ff by Michael Reeves.
Committed on 08/02/2020 at 02:43.
Pushed by mreeves into branch 'master'.

Redraw while scrolling in DiffTextWindow
FIXED-IN:1.8.2

M  +1    -0    src/difftextwindow.cpp

https://invent.kde.org/kde/kdiff3/commit/578d3901f6db1fe9edb3641843ff7276fa1ee2ff
Comment 7 michael 2020-02-20 04:09:26 UTC
*** Bug 417194 has been marked as a duplicate of this bug. ***