Redraw while scrolling in DiffTextWindow

BUG:407894
FIXED-IN:1.8.2